--- a/projects.html
+++ b/projects.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>BlaXrew Studios</title>
-    <meta name="twitter:description" content="Software, Games &amp; More">
-    <meta name="twitter:title" content="BlaXrew Studios">
-    <meta name="description" content="Software, Games &amp; More">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="assets/img/image0005%20-%20Kopie.png">
+    <meta name="twitter:image" content="assets/img/image0005%20-%20Kopie.png">
     <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:image" content="assets/img/image0005%20-%20Kopie.png">
+    <meta property="og:type" content="website">
+    <meta name="description" content="Software, Games &amp; More">
+    <meta name="twitter:title" content="BlaXrew Studios">
+    <meta name="twitter:description" content="Software, Games &amp; More">
     <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
     <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
     <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
@@ -20,9 +21,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 
 <body>
@@ -34,14 +38,15 @@
                     <ul class="nav navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                        <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">Projects</a>
-                            <div class="dropdown-menu"><a class="dropdown-item disabled" href="projects.html">Overview</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a><a class="dropdown-item" href="#"></a><span class="dropdown-item-text">Text Item</span>
-                                <span
-                                    class="dropdown-item-text">Text Item</span><span class="dropdown-item-text">Text Item</span><span class="dropdown-item-text">Text Item</span><span class="dropdown-item-text">Text Item</span>
-                                    <div class="dropdown-divider"></div>
-                            </div>
+                        <li class="nav-item"></li>
+                        <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="projects.html">Projects</a>
+                            <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
+                                <div class="dropdown-divider"></div>
+                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="#">Devils Hunt</a></div>
                         </li>
-                    </ul><span class="navbar-text actions"> <a class="login" href="#">Log In</a><a class="btn btn-light action-button" role="button" href="#">Sign Up</a></span></div>
+                        <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Forum</a></li>
+                    </ul><span class="navbar-text actions"> <a class="login" href="#">Log In</a><a class="btn btn-light action-button" role="button" href="#" style="margin-bottom: 0px;">Sign Up</a></span></div>
             </div>
         </nav>
     </div>
@@ -57,7 +62,7 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image005.png"></a></div>
                         <div class="col">
                             <h3 class="name">Devils Hunt</h3>
-                            <p class="text-white-50 description">A software related boardgame<br>(Multiplayer, Singleplayer, Realife boardgame)<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;">Learn More</button></div>
+                            <p class="text-white-50 description">A software related boardgame<br>(Multiplayer, Singleplayer, Realife boardgame)<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;">Learn More</button></div>
                     </div>
                 </div>
                 <div class="col-sm-6 item">
@@ -65,7 +70,7 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 10px;"></a></div>
                         <div class="col">
                             <h3 class="name">Fallen World</h3>
-                            <p class="text-white-50 description">A 3D story game (planned with RTX). This game includes a time paradox and an invasion<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-bottom: 10px;">Learn More</button></div>
+                            <p class="text-white-50 description">A 3D story game (planned with RTX). This game includes a time paradox and an invasion<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-bottom: 10px;margin-left: 0px;">Learn More</button></div>
                     </div>
                 </div>
                 <div class="col-sm-6 item">
@@ -73,7 +78,7 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/Banner%201%201920x1080.png" style="margin-top: 5px;"></a></div>
                         <div class="col">
                             <h3 class="name">LaS</h3>
-                            <p class="text-white-50 description">Lights and Shadows is a mini adventure game in which you go the way of lights or shadows.<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;">Learn More</button></div>
+                            <p class="text-white-50 description">Lights and Shadows is a mini adventure game in which you go the way of lights or shadows.<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;">Learn More</button></div>
                     </div>
                 </div>
                 <div class="col-sm-6 item">
@@ -81,7 +86,7 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 5px;"></a></div>
                         <div class="col">
                             <h3 class="name">Trix Pong</h3>
-                            <p class="text-white-50 description">This is a game developed by H4rdw4r3. It is a mini soccer game<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;">Learn More</button></div>
+                            <p class="text-white-50 description">This is a game developed by H4rdw4r3. It is a mini soccer game<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;">Learn More</button></div>
                     </div>
                 </div>
                 <div class="col-sm-6 item">
@@ -89,7 +94,7 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 5px;"></a></div>
                         <div class="col">
                             <h3 class="name">Filming Project</h3>
-                            <p class="text-white-50 description">You only get access to it on request. Because it is only available for a group<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;">Contact us</button></div>
+                            <p class="text-white-50 description">You only get access to it on request. Because it is only available for a group<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;">Contact us</button></div>
                     </div>
                 </div>
                 <div class="col-sm-6 item">
@@ -97,7 +102,7 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/Unbenannt.png"></a></div>
                         <div class="col">
                             <h3 class="name">MD Script</h3>
-                            <p class="text-white-50 description">This is called minecraft datapack script and is build to visualize and simplify the datapack creation<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-bottom: 10px;">Learn More</button></div>
+                            <p class="text-white-50 description">This is called minecraft datapack script and is build to visualize and simplify the datapack creation<br></p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-bottom: 10px;margin-left: 0px;">Learn More</button></div>
                     </div>
                 </div>
                 <div class="col-sm-6 item">
@@ -105,7 +110,7 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 5px;"></a></div>
                         <div class="col">
                             <h3 class="name">RCB</h3>
-                            <p class="text-white-50 description">Random Characteristics Battle is a minigame built in the Windows Command Prompt</p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;">Learn More</button></div>
+                            <p class="text-white-50 description">Random Characteristics Battle is a minigame built in the Windows Command Prompt</p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;">Learn More</button></div>
                     </div>
                 </div>
                 <div class="col-sm-6 item">
@@ -113,7 +118,7 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 5px;"></a></div>
                         <div class="col">
                             <h3 class="name">Tower Climber</h3>
-                            <p class="text-white-50 description">This is a 3D (FPS Controlled) game which you play online with other players together.</p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;" disabled="">Learn More</button></div>
+                            <p class="text-white-50 description">This is a 3D (FPS Controlled) game which you play online with other players together.</p><button class="btn btn-outline-primary btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;" disabled="">Learn More</button></div>
                     </div>
                 </div>
             </div>
