--- a/Terms of Service.html
+++ b/Terms of Service.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>BlaXrew Studios</title>
-    <meta name="twitter:description" content="Software, Games &amp; More">
-    <meta name="twitter:title" content="BlaXrew Studios">
-    <meta name="description" content="Software, Games &amp; More">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="assets/img/image0005%20-%20Kopie.png">
+    <meta name="twitter:image" content="assets/img/image0005%20-%20Kopie.png">
     <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:image" content="assets/img/image0005%20-%20Kopie.png">
+    <meta property="og:type" content="website">
+    <meta name="description" content="Software, Games &amp; More">
+    <meta name="twitter:title" content="BlaXrew Studios">
+    <meta name="twitter:description" content="Software, Games &amp; More">
     <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
     <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
     <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
@@ -20,9 +21,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 
 <body>
