--- a/about.html
+++ b/about.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>BlaXrew Studios</title>
-    <meta name="twitter:description" content="Software, Games &amp; More">
-    <meta name="twitter:title" content="BlaXrew Studios">
-    <meta name="description" content="Software, Games &amp; More">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="assets/img/image0005%20-%20Kopie.png">
+    <meta name="twitter:image" content="assets/img/image0005%20-%20Kopie.png">
     <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:image" content="assets/img/image0005%20-%20Kopie.png">
+    <meta property="og:type" content="website">
+    <meta name="description" content="Software, Games &amp; More">
+    <meta name="twitter:title" content="BlaXrew Studios">
+    <meta name="twitter:description" content="Software, Games &amp; More">
     <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
     <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
     <link rel="icon" type="image/png" sizes="1053x1053" href="assets/img/BXSLogo.png">
@@ -20,40 +21,91 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 
 <body>
     <div class="footer-dark">
         <nav class="navbar navbar-dark navbar-expand-md bg-dark navigation-clean-button">
-            <div class="container"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse"
-                    id="navcol-1">
+                    id="navcol-2">
                     <ul class="nav navbar-nav mr-auto">
-                        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                        <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="projects.html">Projects</a>
-                            <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a><a class="dropdown-item" href="#">Second Item</a><a class="dropdown-item" href="#">Third Item</a></div>
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
+                        <li class="nav-item"></li>
+                        <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="projects.html">Projects</a>
+                            <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
+                                <div class="dropdown-divider"></div>
+                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="#">Devils Hunt</a></div>
                         </li>
-                    </ul><span class="navbar-text actions"> <a class="login" href="#">Log In</a><a class="btn btn-light action-button" role="button" href="#">Sign Up</a></span></div>
+                        <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Forum</a></li>
+                    </ul><span class="navbar-text actions"> <a class="login" href="#">Log In</a><a class="btn btn-light action-button" role="button" href="#" style="margin-bottom: 0px;">Sign Up</a></span></div>
             </div>
         </nav>
     </div>
-    <div style="margin-bottom: 10px;">
+    <div class="text-dark bg-dark" style="padding-top: 5px;padding-bottom: 5px;">
         <div class="container">
-            <div class="row"></div>
+            <div class="row">
+                <div class="col">
+                    <h2 class="text-white">About us</h2>
+                    <p class="text-white-50">Were a small team producing Software, Games, Music, Videos, Movies and other stuff. Many software projects are open source and available on github. If you want to learn more about our projects click&nbsp; &nbsp;&nbsp;<a href="https://www.blaxrew-studios.vision/projects.html">here</a>.<br></p>
+                    <h2
+                        class="text-white">Careers</h2>
+                        <p class="text-white-50">If you think you&nbsp; are the right and want to apply fill in the form below&nbsp; or send an email to blaxrew.studios@gmail.com with the subject "Application"&nbsp; to apply. We are <strong>not</strong>&nbsp; training you. When
+                            you apply and we accept, we&nbsp; are going to test if you fit into the rest of the team. This is an unpayed job, that means you will not gain any money at the moment if&nbsp; you are part of the team.</p>
+                </div>
+            </div>
         </div>
     </div>
-    <div>
+    <div class="bg-dark contact-clean" style="padding-top: 40px;">
+        <form class="bg-dark shadow-lg" style="padding-top: 0px;" data-bss-recipient="c6268884f198426de24f9a36bbd9ca7d" data-bss-subject="contact">
+            <h2 class="text-center text-white" style="padding: 10px;">Contact us</h2>
+            <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name"></div><input class="border-dark form-control is-invalid" type="email" name="email" placeholder="Email" inputmode="email" style="margin-bottom: 15px;" required="" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[A-Za-z]{2,4}">
+            <input
+                class="form-control" type="text" name="subject" placeholder="Subject" style="margin-bottom: 5px;">
+                <div class="form-group"><textarea class="form-control" name="message" placeholder="Message" rows="14"></textarea></div>
+                <div class="form-group"><button class="btn btn-primary btn-block" id="asend" type="submit" disabled="" style="margin-left: 0px;">send </button></div>
+                <div class="form-check" style="padding-top: 10px;"><input class="form-check-input" type="checkbox" id="atogBtn"><label class="form-check-label text-light" for="tapa" style="font-size: 0.83em;">By continuing you agree to our <a href="Terms%20of%20Service.html">Tems of&nbsp; Service</a>&nbsp; and&nbsp; <a href="privacy%20policy.html">Privacy&nbsp; Policy</a>.&nbsp;</label></div>
+        </form>
+    </div>
+    <div class="text-white bg-dark team-boxed">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12"></div>
+            <div class="intro">
+                <h2 class="text-center">Team </h2>
+                <p class="text-center text-white-50">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae.</p>
             </div>
-            <div class="row">
-                <div class="col-md-6"></div>
-                <div class="col-md-6"></div>
+            <div class="row people" style="padding-top: 10px;padding-bottom: 20px;">
+                <div class="col-md-6 col-lg-4 item team-card-left">
+                    <div class="bg-dark box team-card-left"><img class="rounded-circle" src="assets/img/BXSLogo.png" style="width=250px;height=250px">
+                        <h3 class="name">Patrick</h3>
+                        <p class="title">LEAD / Developer / Artist</p>
+                        <p class="text-white-50 description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, et interdum justo suscipit id. Etiam dictum feugiat tellus, a semper massa. </p>
+                        <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 item team-card-middle">
+                    <div class="bg-dark box team-card-right"><img class="rounded-circle" src="assets/img/1080p%20Transparency.png" style="height: 160px;">
+                        <h3 class="invisible name">Benedikt</h3>
+                        <p class="invisible title">Admin / Developer/ Artist</p>
+                        <p class="invisible description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, et interdum justo suscipit id. Etiam dictum feugiat tellus, a semper massa. </p>
+                        <div class="invisible social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4 item team-card-right">
+                    <div class="bg-dark box team-card-right"><img class="rounded-circle" src="assets/img/profbild-hw-1.png" style="width=250px;height=250px">
+                        <h3 class="name">Benedikt</h3>
+                        <p class="title">Admin / Developer / Artist</p>
+                        <p class="text-white-50 description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, et interdum justo suscipit id. Etiam dictum feugiat tellus, a semper massa. </p>
+                        <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -74,12 +126,13 @@
                         <h3>About</h3>
                         <ul>
                             <li><a href="#">Company</a></li>
-                            <li><a href="#">Team</a></li>
                             <li><a href="#">Careers</a></li>
+                            <li><a href="#">Team</a></li>
+                            <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
                     <div class="col-md-6 item text">
-                        <h3>BlaXrew Studios</h3>
+                        <h3>BlaXrew Studios<br></h3>
                         <p>Here you can find our&nbsp; &nbsp;terms and policies:&nbsp;&nbsp;<br>-&nbsp; <a href="privacy%20policy.html">Privacy Policy</a><br>- <a href="Terms%20of%20Service.html">Terms of service</a><br>- <a href="impressum.html">Impressum (DE)</a></p>
                     </div>
                     <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a>
