--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - BlaXrew Studios</title>
+    <title>BlaXrew Studios</title>
     <meta name="twitter:image" content="assets/img/image0005%20-%20Kopie.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:image" content="assets/img/image0005%20-%20Kopie.png">
@@ -32,9 +32,9 @@
 <body>
     <div class="footer-dark">
         <nav class="navbar navbar-dark navbar-expand-md bg-dark navigation-clean-button">
-            <div class="container"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse"
-                    id="navcol-2">
+                    id="navcol-1">
                     <ul class="nav navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
@@ -50,36 +50,22 @@
             </div>
         </nav>
     </div>
-    <div class="text-white bg-dark">
+    <div class="bg-dark">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 text-light" style="margin-top: 25px;">
-                    <h1>BlaXrew Studios</h1>
-                    <p>Were a small team producing Software, Games, Music, Videos, Movies and other stuff. Many software projects are open source and available on github. If you want to learn more about our projects click&nbsp; &nbsp;&nbsp;<a href="https://www.blaxrew-studios.vision/projects.html">here</a>.<br><br></p>
-                </div>
+                <div class="col-md-12 text-dark"><a class="twitter-timeline" href="https://twitter.com/blaxrew?ref_src=twsrc%5Etfw">Tweets by blaxrew</a> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 text-dark" style="margin-left: 42.75%;"><a href="https://twitter.com/blaxrew?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @blaxrew</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
             </div>
         </div>
-    </div>
-    <div></div>
-    <div class="text-light bg-dark newsletter-subscribe">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center">Subscribe for our Newsletter</h2>
-                <p class="text-center text-white-50">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
-            </div>
-            <form class="form-inline" data-bss-recipient="c6268884f198426de24f9a36bbd9ca7d" data-bss-subject="Newsletter Subs">
-                <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Your Email"></div>
-                <div class="form-group"><button class="btn btn-primary" id="isub" type="submit" disabled="" style="margin-bottom: 0px;">Subscribe </button></div>
-            </form>
-        </div>
-        <div class="form-check" style="margin-left: 37%;padding-top: 10px;"><input class="form-check-input" type="checkbox" id="itogBtn"><label class="form-check-label text-light" for="tapa">By continuing you agree to our <a href="Terms%20of%20Service.html">Tems of&nbsp; Service</a>&nbsp; and&nbsp; <a href="privacy%20policy.html">Privacy&nbsp; Policy</a>.&nbsp;</label></div>
     </div>
     <div class="footer-dark">
         <footer>
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-md-3 item">
-                        <h3><strong>Our work</strong><br></h3>
+                        <h3>Our work</h3>
                         <ul>
                             <li><a href="#">Software &amp; Game Development</a></li>
                             <li><a href="#">3D Modelling &amp; Animation</a></li>
@@ -91,12 +77,13 @@
                         <h3>About</h3>
                         <ul>
                             <li><a href="#">Company</a></li>
-                            <li><a href="#">Team</a></li>
                             <li><a href="#">Careers</a></li>
+                            <li><a href="#">Team</a></li>
+                            <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
                     <div class="col-md-6 item text">
-                        <h3>BlaXrew Studios</h3>
+                        <h3>BlaXrew Studios<br></h3>
                         <p>Here you can find our&nbsp; &nbsp;terms and policies:&nbsp;&nbsp;<br>-&nbsp; <a href="privacy%20policy.html">Privacy Policy</a><br>- <a href="Terms%20of%20Service.html">Terms of service</a><br>- <a href="impressum.html">Impressum (DE)</a></p>
                     </div>
                     <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a>
@@ -107,14 +94,6 @@
             </div>
         </footer>
     </div>
-    <div></div>
-    <div></div>
-    <div class="btn-group" role="group"></div>
-    <div class="alert cookiealert text-center">
-        <p class="rubberBand animated">We use cookies to give you the best experience. Read our <a href="privacy%20policy.html">cookie policy</a>.</p><button class="btn btn-primary btn-sm acceptcookies" type="button">Accept</button></div>
-    <div></div>
-    <div></div>
-    <section class="showcase"></section>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/smart-forms.min.js"></script>
