--- a/index.html
+++ b/index.html
@@ -49,7 +49,18 @@
                     </ul><span class="navbar-text actions"> <a class="login" href="#">Log In</a><a class="btn btn-light action-button" role="button" href="#" style="margin-bottom: 0px;">Sign Up</a></span></div>
             </div>
         </nav>
+        <div class="header-dark" style="background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;) center / cover;">
+            <div class="container hero">
+                <div class="row">
+                    <div class="col-md-8 offset-md-2">
+                        <h1 class="text-center" style="font-family: ethnocentric;font-size: 3em;">BlaXrew Studios</h1>
+                        <h1 class="text-center" style="font-family: sans-serif;">Software, Games &amp; More</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    <div></div>
     <div class="text-white bg-dark">
         <div class="container">
             <div class="row">
