--- a/about.html
+++ b/about.html
@@ -23,9 +23,12 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/fonts/line-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/material-icons.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 
@@ -42,7 +45,7 @@
                         <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="projects.html">Projects</a>
                             <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
                                 <div class="dropdown-divider"></div>
-                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="#">Devils Hunt</a></div>
+                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a></div>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Forum</a></li>
@@ -55,7 +58,7 @@
             <div class="row">
                 <div class="col">
                     <h2 class="text-white">About us</h2>
-                    <p class="text-white-50">Were a small team producing Software, Games, Music, Videos, Movies and other stuff. Many software projects are open source and available on github. If you want to learn more about our projects click&nbsp; &nbsp;&nbsp;<a href="https://www.blaxrew-studios.vision/projects.html">here</a>.<br></p>
+                    <p class="text-white-50">Were a small team producing Software, Games, Music, Videos, Movies and other stuff. Many software projects are open source and available on github. If you want to learn more about our projects click&nbsp; &nbsp;&nbsp;<a href="projects.html">here</a>.<br></p>
                     <h2
                         class="text-white">Careers</h2>
                         <p class="text-white-50">If you think you&nbsp; are the right and want to apply fill in the form below&nbsp; or send an email to blaxrew.studios@gmail.com with the subject "Application"&nbsp; to apply. We are <strong>not</strong>&nbsp; training you. When
@@ -146,6 +149,7 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/smart-forms.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
     <script src="assets/js/script.min.js"></script>
 </body>
 
