--- a/404.html
+++ b/404.html
@@ -21,7 +21,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="assets/fonts/line-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/material-icons.min.css">
+    <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
@@ -45,7 +49,7 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Forum</a></li>
-                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="admin.blaxrew-studios.vision" style="margin-bottom: 0px;">Open Dashboard</a></span></div>
+                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="http://admin.blaxrew-studios.vision" style="margin-bottom: 0px;">Open Dashboard</a></span></div>
             </div>
         </nav>
     </div>
@@ -86,7 +90,7 @@
                     </div>
                     <div class="col-md-6 item text">
                         <h3>BlaXrew Studios</h3>
-                        <p>Here you can find our&nbsp; &nbsp;terms and policies:&nbsp;&nbsp;<br>-&nbsp; <a href="privacy policy.html">Privacy Policy</a><br>- <a href="Terms of Service.html">Terms of service</a><br>- <a href="impressum.html">Impressum (DE)</a></p>
+                        <p>Here you can find our&nbsp; &nbsp;terms and policies:&nbsp;&nbsp;<br>-&nbsp; <a href="privacy%20policy.html">Privacy Policy</a><br>- <a href="Terms%20of%20Service.html">Terms of service</a><br>- <a href="impressum.html">Impressum (DE)</a></p>
                     </div>
                     <div class="col item social"><a href="http://twitter.com/blaxrew"><i class="icon ion-social-twitter"></i></a><a href="https://www.youtube.com/channel/UChOC9uRCoD2-5hzFGEnnOJA"><i class="icon ion-social-youtube"></i></a><a href="http://github.com/blaxrewstudios"><i class="icon ion-social-github"></i></a>
                         <a
@@ -100,12 +104,13 @@
     <div></div>
     <div class="btn-group" role="group"></div>
     <div class="alert cookiealert text-center">
-        <p class="rubberBand animated">We use cookies to give you the best experience. Read our <a href="privacy policy.html">cookie policy</a>.</p><button class="btn btn-primary btn-sm acceptcookies" type="button">Accept</button></div>
+        <p class="rubberBand animated">We use cookies to give you the best experience. Read our <a href="privacy%20policy.html">cookie policy</a>.</p><button class="btn btn-primary btn-sm acceptcookies" type="button">Accept</button></div>
     <div></div>
     <div></div>
     <section class="showcase"></section>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/smart-forms.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
     <script src="assets/js/script.min.js"></script>
 </body>
